# writ

./: .gitignore  Cargo.toml  README.md  foo.md  test-blocks.md  test.md  test_selection.md
.github/workflows/: ci.yml
crates/writ/: Cargo.toml
crates/writ-macros/: Cargo.toml
crates/writ-macros/src/: lib.rs
crates/writ-next/: Cargo.toml
crates/writ-next/src/: block_view.rs  blocks.rs  buffer.rs  cursor.rs  editor.rs  http.rs  lib.rs  line_view.rs  lines.rs  main.rs  render.rs  theme.rs
crates/writ/src/: args.rs  editor_state.rs  editor_view.rs  http.rs  lib.rs  lines.rs  main.rs  title_bar.rs  window.rs
crates/writ/src/document/: block.rs  container.rs  mod.rs  parser.rs  rich_text.rs
crates/writ/src/document_next/: block.rs  container.rs  mod.rs  parser.rs  rich_text.rs
crates/writ/src/editor/: block.rs  mod.rs  state.rs
crates/writ/tests/: document.rs  editor_state.rs  markdown_roundtrip.rs
crates/writ/tests/fixtures/: blockquote.md  bold-italic.md  bullet-list.md  checkbox-list.md  code-block-in-list.md  code-block.md  consecutive-lists.md  deeply-nested-list.md  full.md  horizontal-rule.md  image.md  inline-styles.md  link.md  mixed-nested-list.md  nested-list.md  nested-paragraph-list.md  numbered-list.md  strikethrough.md
crates/writ/tests/fixtures_old/: test-run-new.md
src/: agent_view.rs  args.rs  buffer.rs  config.rs  cursor.rs  demo.rs  diff.rs  document.rs  editor.rs  git.rs  github.rs  highlight.rs  http.rs  inline.rs  lib.rs  line.rs  line_view.rs  lines.rs  main.rs  marker.rs  parser.rs  paste.rs  render.rs  status_bar.rs  theme.rs  title_bar.rs  tree_walk.rs  window.rs  writd.rs
src/acp/: client.rs  mod.rs
src/document/: block.rs  mod.rs  parser.rs
src/editor/: action.rs  config.rs  mod.rs  theme.rs
tests/: document.rs  document_next.rs
tests/fixtures/: test-run.md  test.md
themes/: dracula.json  tokyonight.json
