[package]
name = "writ"
version = "0.8.2"
description = "A hybrid markdown editor combining raw text editing with live inline rendering"
authors = ["Wilfred Denton <wilfred@hey.com>"]
license = "MIT"
edition = "2024"

[lints.clippy]
too_many_arguments = "allow"

[lib]
name = "writ"
path = "src/lib.rs"

[[bin]]
name = "writ"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-compat = "0.2"
clap = { version = "4.5", features = ["derive", "env"] }
futures = "0.3"
gpui = "0.2"
open = "5"
reqwest = { version = "0.13", default-features = false, features = ["http2", "rustls"] }
ropey = "1.6"
tree-sitter = "0.26"
tree-sitter-bash = "0.25"
tree-sitter-highlight = "0.26"
tree-sitter-md = "0.5"
tree-sitter-rust = "0.24"
undo = "0.52"

[profile.release]
lto = "thin"
codegen-units = 1

# Fast release builds for development (cargo build --profile release-fast)
[profile.release-fast]
inherits = "release"
lto = false
codegen-units = 16
