[package]
name = "writ"
version = "0.12.0"
description = "A hybrid markdown editor combining raw text editing with live inline rendering"
authors = ["Wilfred Denton <wilfred@hey.com>"]
license = "MIT"
edition = "2024"
repository = "https://github.com/wilfreddenton/writ"
homepage = "https://github.com/wilfreddenton/writ"
documentation = "https://docs.rs/writ"

[lints.clippy]
too_many_arguments = "allow"

[lib]
name = "writ"
path = "src/lib.rs"

[[bin]]
name = "writ"
path = "src/main.rs"

[[bin]]
name = "writd"
path = "src/writd.rs"

[dependencies]
agent-client-protocol = "0.9"
anyhow = "1"
async-compat = "0.2"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive", "env"] }
futures = "0.3"
imara-diff = "0.2"
gix = { version = "0.77", default-features = false }
gpui = "0.2"
notify = "8.2"
open = "5"
regex = "1.12.2"
reqwest = { version = "0.13", default-features = false, features = ["http2", "rustls", "json"] }
ropey = "1.6"
rustls = { version = "0.23.36", features = ["ring"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
tokio-tungstenite = "0.28"
tree-sitter = "0.26"
tree-sitter-bash = "0.25"
tree-sitter-highlight = "0.26"
tree-sitter-md = "0.5"
tree-sitter-rust = "0.24"
undo = "0.52"
smol = "2.0.2"
async-process = "2.5.0"

[profile.release]
lto = "thin"
codegen-units = 1

# Fast release builds for development (cargo build --profile release-fast)
[profile.release-fast]
inherits = "release"
lto = false
codegen-units = 16

[dev-dependencies]
rustls = { version = "0.23.36", features = ["ring"] }
