[package]
name = "writ"
version = "0.1.0"
description = "A GPUI markdown editor"
authors = ["Wilfred Denton <wilfred@hey.com>"]
license = "MIT"
edition = "2024"

[[bin]]
name = "writ"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
fractional_index = "2.0.2"
futures = "0.3"
gpui = "0.2.2"
itertools = "0.14.0"
open = "5"
pulldown-cmark = "0.13.0"
ureq = { version = "3", features = ["rustls"] }
ropey = "1.6.1"
smol = "2"
serde_json = "1.0.145"
slotmap = "1.1.1"
strum = { version = "0.27.2", features = ["derive"] }

[dev-dependencies]
writ-macros = { path = "../writ-macros" }
